<resources>
    <string name="app_name">FollowPets</string>
    <string name="action_settings">Settings</string>
    <string name="pApellido">1º apellido</string>
    <string name="txtusername">Nombre de usuario</string>
    <string name="sApellido">2º apellido</string>
    <string name="pNombre">1º nombre</string>
    <string name="sNombre">2º nombre</string>
    <string name="optPatrocinador">PATROCINADOR</string>
    <string name="OptParticipante">PARTICIPANTE</string>
    <string name="phone">celular</string>
    <string name="ci">C.I.</string>
    <string name="email">email</string>
    <string name="password">contraseña</string>
    <string name="registrar">REGISTRAR</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
